--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -3,5 +3,49 @@
 {%block title%}indexer{%endblock%}
 
 {% block content %}
-<h1> this is the indexx!! HTML bruhh </h1>
-    {% endblock %}
+    <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
+        <h2 class="mb-12 text-2xl text-center">Newset items</h2>
+        <div class="grid grid-cols-3 gap-3">
+            {% for item in items %}
+                <div>
+                 
+                        <div>
+                            <!-- <img src="{{ item.image.url }}" class="rounded-t-xl"> -->
+                            <img src="{{ item.img.url }}" class="w-[100%]">
+                            <!-- we are writing `item`  cause from `for "item" in items ` in this line -->
+                            <!-- for each item object we are getting the `img` attr  url-->
+                        </div>
+
+                        <div class="p-6 bg-white rounded-b-xl">
+                            <h2 class="text-2xl">{{ item.name }}</h2>
+                            <p class="text-gray-500">Price: {{ item.price }}</p>
+                            <h3>{{item.desc}}</h3>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+
+
+    
+    <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
+        <h2 class="mb-12 text-2xl text-center">Categories</h2>
+
+        <div class="grid grid-cols-3 gap-3">
+            {% for category in cats %}
+            <!-- be vert very!!! CAREFUL -->
+            <!-- it comes as `cats`   -->
+                <div>
+                    <a href="#">
+                        <div class="p-6 bg-white rounded-b-xl">
+                            <h2 class="text-2xl">{{ category.name }}</h2>
+                            <p class="text-gray-500">{{ category.items.count }} items</p>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
