--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,7 +7,7 @@
   <title> {% block title %}{% endblock %} | Puddle </title>  
 <body>
     <nav class="py-3 px-6 flex justify-between items-center border-b border-grey-200" >
-        <a href="" class="pr-3 font-semibold">Puddle</a>
+        <a href="{%url 'core:index'%}" class="pr-3 font-semibold">Puddle</a>
         <div class="space-x-4 flex text-xl  items-center">
             <a href="#" class="text-sm hover:text-gray-500">New Item</a>
             <a href="#" class="text-sm hover:text-gray-500">Browse</a>
@@ -32,7 +32,7 @@
 
             <ul class="space-y-2">
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-                <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
+                <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Privacy policy</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Term of use</a></li>
             </ul>
